[gd_scene load_steps=7 format=3 uid="uid://dbbpee7gvqk46"]

[ext_resource type="Texture2D" uid="uid://5ygqlq5jwnbu" path="res://assets/external/Playing Cards/card-back1.png" id="2_krw6o"]
[ext_resource type="Script" uid="uid://r4iew8ne4ddd" path="res://scripts/card_manager.gd" id="2_t53d7"]
[ext_resource type="Texture2D" uid="uid://bij4hie6cwt7a" path="res://assets/external/Playing Cards/card-clubs-1.png" id="3_v5jvv"]
[ext_resource type="Texture2D" uid="uid://bt3db74u40023" path="res://assets/external/Playing Cards/card-clubs-5.png" id="4_1o3wq"]
[ext_resource type="Texture2D" uid="uid://c7anevx4hjr8n" path="res://assets/external/Playing Cards/card-clubs-9.png" id="5_l20ii"]
[ext_resource type="Texture2D" uid="uid://das74rcu1ij8a" path="res://assets/external/Playing Cards/card-diamonds-2.png" id="6_jnmty"]

[node name="Game" type="Node2D"]

[node name="CardManager" type="Node" parent="."]
script = ExtResource("2_t53d7")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(700, 500)

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("2_krw6o")

[node name="Deal_Button" type="Button" parent="."]
offset_left = 977.0
offset_top = 438.0
offset_right = 1040.0
offset_bottom = 469.0
text = "Deal"

[node name="Hit" type="Button" parent="."]
offset_left = 245.0
offset_top = 642.0
offset_right = 308.0
offset_bottom = 673.0
text = "Hit"

[node name="Stand" type="Button" parent="."]
offset_left = 430.0
offset_top = 646.0
offset_right = 493.0
offset_bottom = 677.0
text = "Stand"

[node name="Shuffle_Button" type="Button" parent="."]
offset_left = 956.0
offset_top = 539.0
offset_right = 1019.0
offset_bottom = 570.0
text = "Shuffle"

[node name="Node2D" type="Node2D" parent="."]

[node name="Card_Holders" type="Node" parent="."]

[node name="Player_1_Card_1" type="Node2D" parent="Card_Holders"]
position = Vector2(200, 500)

[node name="Sprite2D" type="Sprite2D" parent="Card_Holders/Player_1_Card_1"]
texture = ExtResource("3_v5jvv")

[node name="Player_1_Card_2" type="Node2D" parent="Card_Holders"]
position = Vector2(500, 500)

[node name="Sprite2D" type="Sprite2D" parent="Card_Holders/Player_1_Card_2"]
texture = ExtResource("4_1o3wq")

[node name="Player_2_Card_1" type="Node2D" parent="Card_Holders"]
position = Vector2(200, 200)

[node name="Sprite2D" type="Sprite2D" parent="Card_Holders/Player_2_Card_1"]
texture = ExtResource("5_l20ii")

[node name="Player_2_Card_2" type="Node2D" parent="Card_Holders"]
position = Vector2(500, 200)

[node name="Sprite2D" type="Sprite2D" parent="Card_Holders/Player_2_Card_2"]
texture = ExtResource("6_jnmty")

[node name="Node2D2" type="Node2D" parent="."]
